--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "private": true,
+  "name": "cloudflare-waf-bypass",
+  "version": "0.1.0",
+  "description": "",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.build.json",
+    "test": "tsx --test"
   },
+  "keywords": [],
   "author": "Xinhe Wang",
   "license": "MIT",
   "packageManager": "pnpm@10.5.2",
+  "dependencies": {
+    "rebrowser-puppeteer-core": "^23.10.3",
+    "undici": "^7.4.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "eslint": "^9.21.0",
     "prettier": "^3.5.3",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0"
   }
