--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "module": "node16",
     "target": "es2017",
+    "module": "node16",
+    "rootDir": ".",
+    "allowJs": true,
     "noEmit": true,
     "allowSyntheticDefaultImports": true
   },
